log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: logoutput
  name: logoutput
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logoutput
  template:
    metadata:
      labels:
        app: logoutput
    spec:
      containers:
        - image: joyboy67/log-output:4.1
          name: log-writer
          command: ["node", "writer.js"]
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files

        - image: joyboy67/log-output:4.1
          name: log-reader
          command: ["node", "reader.js"]
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: shared-logs
              mountPath: /usr/src/app/files
            - name: config-volume
              mountPath: /usr/src/app/config
      volumes:
        - name: shared-logs
          persistentVolumeClaim:
            claimName: log-claim
        - name: config-volume
          configMap:
            name: my-config
