log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: logoutput
  name: logoutput
  namespace: exercises
spec:
  type: NodePort
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
  selector:
    app: logoutput
status:
  loadBalancer: {}
