log-output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: my-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: logoutput
                port:
                  number: 2345
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
